--- a/index.html
+++ b/index.html
@@ -69,23 +69,29 @@
                     <div class="row fila">
                         <div class="col stand" id="opt7">
                             <h2>7</h2>
+                            <img class="d-none img-fluid mt-3" src="./img/img1.jpg" alt="">
                         </div>
                         <div class="col stand"id="opt8">
                             <h2>8</h2>
+                            <img class="d-none img-fluid mt-3" src="./img/img2.jpg" alt="">
                         </div>
                         <div class="col stand"id="opt9">
                             <h2>9</h2>
+                            <img class="d-none img-fluid mt-3" src="./img/img3.jpg" alt="">
                         </div>
                     </div>
                     <div class="row fila">
                         <div class="col stand"id="opt10">
                             <h2>10</h2>
+                            <img class="d-none img-fluid mt-3" src="./img/img4.jpg" alt="">
                         </div>
                         <div class="col stand"id="opt11">
                             <h2>11</h2>
+                            <img class="d-none img-fluid mt-3" src="./img/img5.jpg" alt="">
                         </div>
                         <div class="col stand"id="opt12">
                             <h2>12</h2>
+                            <img class="d-none img-fluid mt-3" src="./img/img6.jpg" alt="">
                         </div>
                     </div>
                   </div>
