ajustes de visualizacion y puesta a punto para testeo hasta el momento

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div class="container contenedor d-flex justify-content-center align-items-center">
-        <!-- <div class="contenedor d-flex flex-column justify-content-evenly align-items-center" id="step-0">
+        <div class="contenedor d-flex flex-column justify-content-evenly align-items-center" id="step-0">
             <h1>😬​Bienvenida!!</h1>
             <p>Hola Mica, este es un juego 🎮 que arme, espero que te guste😉​!</p>
             <button type="button" class="btn btn-primary" id="iniciar">Iniciar</button>
@@ -33,12 +33,12 @@
             <p>Este es el juego de la memoria 🔮​, tenes que encontrar los pares iguales🤪​ <br> Suerte☘️​☘️​!​</p>
             <button type="button" class="btn btn-primary" id="sig-2">Jugar</button>
             </div>
-        </div> -->
-        <div class="contenedor d-flex flex-column justify-content-evenly align-items-center" id="step-3">
+        </div>
+        <div class="d-none contenedor d-flex flex-column justify-content-evenly align-items-center" id="step-3">
             <h1>​​🕹️​Juego de la memoria</h1>
-            <div class="d-flex flex-column align-items-center">
-                <div class="container text-center text-uppercase tabla">
-                    <div class="row fila justify-content-evenly">
+            <div class="d-flex flex-column">
+                <div class="container text-center tabla p-4">
+                    <div class="row fila">
                         <div class="col aling-center stand" id="opt1">
                             <h2>1</h2>
                             <img class="d-none img-fluid mt-3" src="./img/img1.jpg" alt="">
