--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </div>
                 </div>
             </div>
-            <div class="d-none choice" id="msg">
+            <div class="d-none container choice" id="msg">
                 <p>🔥​🔥​ GANASTE!! 🔥🔥​​<br>felicidades la rompiste!😎​<br>podes jugar otra vez ​🔄​ o bien avanzar para ir tras el premio🏆​​​🔥</p>
                 <div class="buttons">
                 <button type="button" class="btn btn-primary" id="again">Otra vez</button>
@@ -68,7 +68,7 @@
                 </div>
             </div>
         </div>
-        <div class="d-none choice" id="step-4">
+        <div class="d-none choiceN" id="step-4">
             <h1 class="mb-4">​​💪​El desafio​</h1>
             <p>🔥Estas muy cerca de ganar el premio!​​ 😲😲😲<br>El desfio es muy simple 😉​, solo tenes que sacarte una foto 📸​ con jona sosteniendo el celu 📳​ en tu pecho mostrando una imagen 🖼️​, cuando lo cumplas jona te va a dar un codigo para 💥​💥ingresar👇👇​</p>
             <div class="buttons">
@@ -76,7 +76,7 @@
             <button type="button" class="btn btn-primary" id="sig-4">Codigo</button>
             </div>
         </div>
-        <div class="d-none choice" id="step-5">
+        <div class="d-none container choiceN" id="step-5">
             <h1 class="mb-4">​​💪​El desafio</h1>
             <p>🔥🔥Ingresa el codigo para saber cual es el premio!!🔥🔥​​ ​🤪​😬​😱​😝​😎​<br>
                 Codigo:<input class="mt-3" type="text" id="codigo1">
@@ -87,45 +87,45 @@
             <button type="button" class="btn btn-primary" id="sig-5">Validar</button>
             </div>
         </div>
-        <div class="d-none choice" id="step-6">
+        <div class="d-none choiceN" id="step-6">
             <h1 class="mb-4">🔥​​​Felicidades</h1>
             <p>🔥🔥Te felicito ganaste un llavero y una taza de STITCH!!🔥🔥​​ ​🤪​😬​😱​😝​😎​<br>Espero que te guste!😘​🤩​
-                <br><br>Si encontras otro Codigo...<input class="mt-3" type="text" id="codigo2">
+                <br>Si encontras otro Codigo...<input class="mt-3" type="text" id="codigo2">
                 <span class="mt-3" id="resul2">...</span>
             ​</p>
             <div class="buttons">
             <button type="button" class="btn btn-primary" id="sig-6">Validar</button>
             </div>
         </div>
-        <div class="d-none choice letter" id="step-7">
+        <div class="d-none container choiceN letter" id="step-7">
             <h1 class="mb-4">❣️​​Mika</h1>
             <p>😬Ya tenemos 1 año! de que empezamos a salir, wow que loco no? 🤪 fue un año donde pasamos muchas cosas 🥴​ , cosas buenas y no tan buenas.. 😄​🤕​😡 peleas, muchas peleas jajaja pero creo que todo lo que pasamos nos hace llegar a donde hoy estamos...🙂​​</p>
             <div class="buttons">
             <button type="button" class="btn btn-primary" id="sig-7">Siguiente</button>
             </div>
         </div>
-        <div class="d-none choice letter" id="step-8">
+        <div class="d-none choiceN letter" id="step-8">
             <h1 class="mb-4">❣️​​Mika</h1>
             <p>😬Sos super importante en mi vida!💖​ gracias por este año en que me tuviste que bancar 🤪​, se que no soy una persona facil de llevar, pero bueno vos te la buscaste 😎​😎​ jajajaj pero encerio gracias por todo lo que haces por mi y lo que das cada dia por mi...🙂​​</p>
             <div class="buttons">
             <button type="button" class="btn btn-primary" id="sig-8">Siguiente</button>
             </div>
         </div>
-        <div class="d-none choice letter" id="step-9">
+        <div class="d-none choiceN letter" id="step-9">
             <h1 class="mb-4">❣️​​Mika</h1>
             <p>Espero que te guste esto que arme😎​💻​, me llevo varias horas de sueño 😴​🥱​, pero vale la pena!😁​ <br>❤️​​🔥Te quieroo muchisimooo Hermosa!!🔥​❤️​​​<br>ah!... vos que sabes coreano te dejo esto para ver si descubris que es..</p>
             <div class="buttons">
             <button type="button" class="btn btn-primary" id="sig-9">Siguiente</button>
             </div>
         </div>
-        <div class="d-none choice letter" id="step-10">
+        <div class="d-none choiceN letter" id="step-10">
             <h1 class="mb-4">❣️​​Mika</h1>
             <p>❤️​​🔥내 여자친구가 되고 싶어?🔥​❤️​​​</p>
             <div class="buttons">
             <button type="button" class="btn btn-primary" id="sig-10">Traducir</button>
             </div>
         </div>
-        <div class="d-none choice letter" id="step-11">
+        <div class="d-none choiceN letter" id="step-11">
             <h1 class="mb-4">❣️​​Mika</h1>
             <p>Queres ser mi novia?<br>❤️🔥🔥​❤️​​​</p>
             <div class="buttons">
@@ -133,7 +133,7 @@
             <button type="button" class="btn btn-primary" id="sig-12">Si!</button>
             </div>
         </div>
-        <div class="d-none choice letter" id="step-12">
+        <div class="d-none choiceN letter" id="step-12">
             <h1 class="mb-4">❣️Novios😎</h1>
             <p>​🥰​🥰​😍​😍​🥰​🥰​​​<br>❤️🔥🔥​❤️​​​</p>
         </div>
